--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "gatsby": "^4.4.0",
     "gatsby-plugin-google-analytics": "^4.12.1",
     "gatsby-plugin-google-tagmanager": "^4.12.1",
-    "gatsby-plugin-mdx": "^3.4.0",
+    "gatsby-plugin-mdx": "^4.0.0",
     "gatsby-plugin-meta-redirect": "^1.1.1",
     "gatsby-plugin-postcss": "^5.21.0",
     "gatsby-plugin-purgecss": "^6.1.0",
@@ -65,6 +65,7 @@
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "rehype-katex": "5.0.0",
+    "remark-gfm": "^1",
     "remark-math": "3.0.1",
     "signale": "^1.4.0"
   },
